# torchgbif

./: .gitignore  README.md  TUTORIAL.md  paper.bib  paper.md  pyproject.toml
.github/: RELEASE_EXAMPLES.md  RELEASE_PROCESS.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
examples/: README.md  basic_usage.py  fair_data_management.py  species_distribution_modeling.py  unified_species_approach.py
torchgbif/: __init__.py  _version.py  config_manager.py  dataloaders.py  datasets.py  fair.py  utils.py
torchgbif/configs/: config.yaml
torchgbif/configs/dataloader/: default.yaml  large_batch.yaml
torchgbif/configs/dataset/: gbif_occurrence.yaml  gbif_species.yaml
